RESOLVED FIXED21764
REGRESSION: profiles don't show up in the Web Inspector
https://bugs.webkit.org/show_bug.cgi?id=21764
Summary REGRESSION: profiles don't show up in the Web Inspector
Timothy Hatcher
Reported 2008-10-20 18:49:49 PDT
This regressed with the JSValue base-class changes.
Attachments
Proposed patch (4.85 KB, patch)
2008-10-20 18:50 PDT, Timothy Hatcher
oliver: review+
Timothy Hatcher
Comment 1 2008-10-20 18:50:32 PDT
Created attachment 24534 [details] Proposed patch I am not totally sure why this works, but it does.
Timothy Hatcher
Comment 2 2008-10-20 21:52:14 PDT
Landed in r37756.
Note You need to log in before you can comment on or make changes to this bug.