third_party/WebKit/WebCore/inspector/JavaScriptProfile.cpp
@@ -42,7 +42,7 @@ namespace WebCore {
 
 // Cache
 
-typedef HashMap<Profile*, JSValuePtr> ProfileMap;
+typedef HashMap<Profile*, JSObject*> ProfileMap;
 
 static ProfileMap& profileCache()
 { 
@@ -281,7 +281,7 @@ JSValuePtr toJS(ExecState* exec, Profile* profile)
     if (!profile)
         return jsNull();
 
-    JSValuePtr profileWrapper = profileCache().get(profile);
+    JSObject* profileWrapper = profileCache().get(profile);
     if (profileWrapper)
         return profileWrapper;
 
@@ -290,6 +290,5 @@ JSValuePtr toJS(ExecState* exec, Profile* profile)
     profileCache().set(profile, profileWrapper);
     return profileWrapper;
 }
-
 
 } // namespace WebCore
