third_party/WebKit/WebCore/inspector/JavaScriptProfileNode.cpp
@@ -43,9 +43,9 @@ namespace WebCore {
 
 // Cache
 
-typedef HashMap<ProfileNode*, JSValuePtr> ProfileNodeMap;
+typedef HashMap<ProfileNode*, JSObject*> ProfileNodeMap;
 
-static ProfileNodeMap& ProfileNodeCache()
+static ProfileNodeMap& profileNodeCache()
 { 
     static ProfileNodeMap staticProfileNodes;
     return staticProfileNodes;
@@ -195,7 +195,7 @@ static JSValueRef getVisible(JSContextRef ctx, JSObjectRef thisObject, JSStringR
 static void finalize(JSObjectRef object)
 {
     ProfileNode* profileNode = static_cast<ProfileNode*>(JSObjectGetPrivate(object));
-    ProfileNodeCache().remove(profileNode);
+    profileNodeCache().remove(profileNode);
     profileNode->deref();
 }
 
@@ -220,25 +220,24 @@ JSClassRef ProfileNodeClass()
         0, finalize, 0, 0, 0, 0, 0, 0, 0, 0, 0
     };
 
-    static JSClassRef ProfileNodeClass = JSClassCreate(&classDefinition);
-    return ProfileNodeClass;
+    static JSClassRef profileNodeClass = JSClassCreate(&classDefinition);
+    return profileNodeClass;
 }
 
-JSValuePtr toJS(ExecState* exec, ProfileNode* ProfileNode)
+JSValuePtr toJS(ExecState* exec, ProfileNode* profileNode)
 {
-    if (!ProfileNode)
+    if (!profileNode)
         return jsNull();
 
-    JSValuePtr ProfileNodeWrapper = ProfileNodeCache().get(ProfileNode);
-    if (ProfileNodeWrapper)
-        return ProfileNodeWrapper;
+    JSObject* profileNodeWrapper = profileNodeCache().get(profileNode);
+    if (profileNodeWrapper)
+        return profileNodeWrapper;
 
-    ProfileNode->ref();
+    profileNode->ref();
 
-    ProfileNodeWrapper = toJS(JSObjectMake(toRef(exec), ProfileNodeClass(), static_cast<void*>(ProfileNode)));
-    ProfileNodeCache().set(ProfileNode, ProfileNodeWrapper);
-    return ProfileNodeWrapper;
+    profileNodeWrapper = toJS(JSObjectMake(toRef(exec), ProfileNodeClass(), static_cast<void*>(profileNode)));
+    profileNodeCache().set(profileNode, profileNodeWrapper);
+    return profileNodeWrapper;
 }
-
 
 } // namespace WebCore
